--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
   "deno.enablePaths": ["./src", "./tests", "./test_pkg"],
   "files.eol": "\n",
   "editor.formatOnSave": true,
+  "deno.unstable": true,
   "[typescript]": {
     "editor.defaultFormatter": "denoland.vscode-deno"
   }
