--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "deno-clarigen",
-  "version": "1.0.0",
+  "name": "clarigen-deno",
+  "version": "0.1.0",
   "main": "index.js",
   "author": "''",
   "license": "MIT",
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.5",
+    "@changesets/cli": "^2.23.0",
     "@clarigen/cli": "file:.yalc/@clarigen/cli"
   }
 }
