--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "license": "MIT",
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.5",
-    "@changesets/cli": "^2.23.0",
-    "@clarigen/cli": "file:.yalc/@clarigen/cli"
+    "@changesets/cli": "^2.23.0"
   },
   "private": true
 }
