fix: changeset action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,5 +23,7 @@ jobs:
 
       - name: Create Release Pull Request
         uses: changesets/action@v1
+        with:
+          publish: echo "Yay!"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
