--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "@changesets/changelog-github": "^0.4.5",
     "@changesets/cli": "^2.23.0"
   },
+  "scripts": {
+    "version": "changeset version && git add . && git commit -m \"chore: version\" && git tag && git push origin --follow-tags"
+  },
   "private": true
 }
