--- a/deno.json
+++ b/deno.json
@@ -13,7 +13,7 @@
     },
     "rules": {
       "tags": ["recommended"],
-      "exclude": ["no-explicit-any"],
+      "exclude": ["no-explicit-any", "no-empty"],
       "include": ["eqeqeq", "no-const-assign", "no-throw-literal"]
     }
   }
