--- a/scripts.yaml
+++ b/scripts.yaml
@@ -35,6 +35,7 @@ scripts:
       - deno check src/index.ts
       - deno check src/cli/commands/clarigen.ts
       - deno check test_pkg/*
+      - deno lint
 
   build:
     cmd:
@@ -56,3 +57,5 @@ scripts:
     cmd: src/cli/commands/clarigen.ts
     allow:
       - all
+
+  lock: deno cache --lock=lock.json --lock-write src/deps.ts
