--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -3,12 +3,15 @@ name = "deno-clarigen"
 authors = []
 description = ""
 telemetry = false
-requirements = []
-cache_dir = "/Users/hankstoever/.clarinet/cache"
 boot_contracts = ["pox", "costs-v2", "bns"]
+
+[[project.requirements]]
+contract_id = "SP3DX3H4FEYZJZ586MFBS25ZW3HZDMEW92260R2PR.ft-trait"
+
+[project.cache_location]
+path = ".requirements"
 [contracts.tester]
 path = "contracts/tester.clar"
-depends_on = []
 
 [repl]
 costs_version = 2
