feat: include docs in default config

--- a/src/cli/files/init-config.toml
+++ b/src/cli/files/init-config.toml
@@ -17,3 +17,9 @@ output = "esm/clarigen.ts"
 # examples:
 # after = "yarn prettier ./esm/index.ts"
 # after = "echo 'yay'"
+
+# Set where you'd like generated contract docs
+# Generate docs by running `clarigen docs`
+[docs]
+# `output` should be a folder
+output = "docs"
