feat: testing Clarity2 settings

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -13,6 +13,7 @@ path = ".requirements"
 
 [contracts.counter]
 path = "contracts/counter.clar"
+clarity_version = 2
 
 [contracts.tester]
 path = "contracts/tester.clar"
