--- a/deployments/default.simnet-plan.yaml
+++ b/deployments/default.simnet-plan.yaml
@@ -35,8 +35,12 @@ genesis:
       address: STNHKEPYEPJ8ET55ZZ0M5A34J0R3N5FM2CMMMAZ6
       balance: "100000000000000"
   contracts:
+    - costs
     - pox
-    - costs-v2
+    - pox-2
+    - lockup
+    - costs-2
+    - cost-voting
     - bns
 plan:
   batches:
@@ -45,12 +49,15 @@ plan:
         - emulated-contract-publish:
             contract-name: ft-trait
             emulated-sender: SP3DX3H4FEYZJZ586MFBS25ZW3HZDMEW92260R2PR
-            path: ".requirements/SP3DX3H4FEYZJZ586MFBS25ZW3HZDMEW92260R2PR.ft-trait.clar"
-        - emulated-contract-publish:
-            contract-name: tester
-            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
-            path: contracts/tester.clar
+            path: ".cache/requirements/SP3DX3H4FEYZJZ586MFBS25ZW3HZDMEW92260R2PR.ft-trait.clar"
+            clarity-version: 1
         - emulated-contract-publish:
             contract-name: counter
             emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
             path: contracts/counter.clar
+            clarity-version: 2
+        - emulated-contract-publish:
+            contract-name: tester
+            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            path: contracts/tester.clar
+            clarity-version: 1
