--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
   "files.eol": "\n",
   "editor.formatOnSave": true,
   "deno.unstable": true,
+  "deno.config": "./deno.json",
   "[typescript]": {
     "editor.defaultFormatter": "denoland.vscode-deno"
   }
