feat: maps/vars in claridoc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,7 @@
   "deno.config": "./deno.json",
   "[typescript]": {
     "editor.defaultFormatter": "denoland.vscode-deno"
-  }
+  },
+  "deno.inlayHints.variableTypes.enabled": false,
+  "deno.inlayHints.parameterTypes.enabled": false,
 }
