--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -1,30 +1,31 @@
 [project]
-name = "deno-clarigen"
+name = 'deno-clarigen'
+description = ''
 authors = []
-description = ""
 telemetry = false
-boot_contracts = ["pox", "costs-v2", "bns"]
+cache_dir = '.cache'
 
 [[project.requirements]]
-contract_id = "SP3DX3H4FEYZJZ586MFBS25ZW3HZDMEW92260R2PR.ft-trait"
+contract_id = 'SP3DX3H4FEYZJZ586MFBS25ZW3HZDMEW92260R2PR.ft-trait'
 
-[project.cache_location]
-path = ".requirements"
-
+[[project.requirements]]
+contract_id = 'SP3DX3H4FEYZJZ586MFBS25ZW3HZDMEW92260R2PR.Wrapped-Bitcoin'
 [contracts.counter]
-path = "contracts/counter.clar"
+path = 'contracts/counter.clar'
+clarity_version = 2
+epoch = 2.1
+
+[contracts.pox2]
+path = 'contracts/pox-2-boot.clar'
 clarity_version = 2
 epoch = 2.1
 
 [contracts.tester]
-path = "contracts/tester.clar"
-
-[repl]
-costs_version = 2
-parser_version = 2
-
+path = 'contracts/tester.clar'
+clarity_version = 1
+epoch = 2.0
 [repl.analysis]
-passes = ["check_checker"]
+passes = ['check_checker']
 
 [repl.analysis.check_checker]
 strict = false
